<?xml version="1.0"?>
<package format="2">
  <name>rospy_gevent</name>
  <version>0.1.1</version>
  <description>Experiments and examples of patching rospy to use co-operative multitasking.</description>

  <maintainer email="ablakey@gmail.com">Andrew Blakey</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin_virtualenv</build_depend>

  <depend>rospy</depend>
  <depend>python-gevent</depend>

  <test_depend>roslint</test_depend>

</package>
